# hippocratic-demographics

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: rust.yml
hippocratic_demographics/: Cargo.toml
hippocratic_demographics/src/: lib.rs
